fixed scale on smaller laptop screens

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 	margin: 0px;
 	padding: 0px;
 	box-sizing: border-box;
-	font-size: 0.9rem;
+	font-size: 0.7rem;
 }
 
 html {
